# pippyzippy

./: Cargo.toml  README.md  STATUS.md  build.rs
.github/workflows/: ci.yml  publish.yml
benches/: decode.rs  encode.rs
scripts/: pre-commit  pre-push
src/: error.rs  lib.rs
src/tests/: fixtures.rs  mod.rs  oracle.rs  round_trip.rs
