[package]
name = "pippyzippy"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust PPMd compression, part of the 7zippy umbrella"
license = "Zlib"
repository = "https://github.com/JackDanger/pippyzippy"
authors = ["Jack Danger Canty"]
build = "build.rs"

[dependencies]
thiserror = "1"
# Phase 1 wrapper backend: ppmd-rust provides a pure-Rust PPMd7 (7z) encoder + decoder.
# Phase 2 will replace this with pippyzippy's own native PPMd implementation.
ppmd-rust = "1.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false
